--- a/package.json
+++ b/package.json
@@ -19,6 +19,7 @@
     "ethers": "^6.15.0",
     "express": "^5.1.0",
     "express-session": "^1.18.2",
+    "fs-extra": "^11.3.2",
     "method-override": "^3.0.0",
     "mongoose": "^8.19.2"
   }
