--- a/package.json
+++ b/package.json
@@ -21,6 +21,7 @@
     "express-session": "^1.18.2",
     "fs-extra": "^11.3.2",
     "method-override": "^3.0.0",
-    "mongoose": "^8.19.2"
+    "mongoose": "^8.19.2",
+    "node-cron": "^4.2.1"
   }
 }
