--- a/package.json
+++ b/package.json
@@ -2,8 +2,9 @@
   "name": "se",
   "version": "1.0.0",
   "description": "",
-  "main": "index.js",
+  "main": "server.js",
   "scripts": {
+    "start": "node server.js",
     "test": "echo \"Error: no test specified\" && exit 1"
   },
   "keywords": [],
@@ -17,7 +18,7 @@
     "dotenv": "^17.2.3",
     "ejs": "^3.1.10",
     "ethers": "^6.15.0",
-    "express": "^5.1.0",
+    "express": "^4.18.2",
     "express-session": "^1.18.2",
     "fs-extra": "^11.3.2",
     "method-override": "^3.0.0",
